// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no group (all groups default) 1`] = `
<View>
  <RCTScrollView
    ListFooterComponent={null}
    ListHeaderComponent={
      <View>
        <View>
          <SearchBar
            onChangeText={[Function]}
            placeholder="Search Members"
          />
          <PopupMenuButton
            actions={[]}
          >
            <Text />
            <Icon
              name="ArrowDown"
            />
          </PopupMenuButton>
        </View>
      </View>
    }
    data={
      [
        {
          "avatarUrl": "foo.gif",
          "bio": "Hello!",
          "id": "1",
          "location": "here",
          "name": "Foo Lane",
        },
        {
          "avatarUrl": "bar.png",
          "bio": "Not a stork",
          "id": "2",
          "location": "there",
          "name": "Bar Jones",
        },
        {
          "avatarUrl": "baz.png",
          "bio": "Could be",
          "id": "3",
          "name": "Baz Chu",
        },
        {
          "avatarUrl": "bonk.jpg",
          "id": "4",
          "name": "Bonk Gundsdottir",
        },
        {
          "avatarUrl": "woof.png",
          "id": "5",
        },
        {
          "id": -1,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View>
            <View>
              <Icon
                name="Search"
              />
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                autoFocus={false}
                editable={true}
                onChangeText={[Function]}
                placeholder="Search Members"
                underlineColorAndroid="transparent"
              />
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text />
              <Icon
                name="ArrowDown"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "foo.gif",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Foo Lane
            </Text>
            <Text>
              here
            </Text>
            <Text
              numberOfLines={4}
            >
              Hello!
            </Text>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "bar.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bar Jones
            </Text>
            <Text>
              there
            </Text>
            <Text
              numberOfLines={4}
            >
              Not a stork
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "baz.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Baz Chu
            </Text>
            <Text
              numberOfLines={4}
            >
              Could be
            </Text>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "bonk.jpg",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bonk Gundsdottir
            </Text>
            <Text
              numberOfLines={4}
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View />
          <View />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders with invite button when a moderator 1`] = `
<View>
  <RCTScrollView
    ListFooterComponent={null}
    ListHeaderComponent={
      <View>
        <Banner
          group={{}}
          handleInviteOnPress={[Function]}
          showInviteButton={true}
        />
        <View>
          <SearchBar
            onChangeText={[Function]}
            placeholder="Search Members"
          />
          <PopupMenuButton
            actions={[]}
          >
            <Text />
            <Icon
              name="ArrowDown"
            />
          </PopupMenuButton>
        </View>
      </View>
    }
    data={
      [
        {
          "avatarUrl": "foo.gif",
          "bio": "Hello!",
          "id": "1",
          "location": "here",
          "name": "Foo Lane",
        },
        {
          "avatarUrl": "bar.png",
          "bio": "Not a stork",
          "id": "2",
          "location": "there",
          "name": "Bar Jones",
        },
        {
          "avatarUrl": "baz.png",
          "bio": "Could be",
          "id": "3",
          "name": "Baz Chu",
        },
        {
          "avatarUrl": "bonk.jpg",
          "id": "4",
          "name": "Bonk Gundsdottir",
        },
        {
          "avatarUrl": "woof.png",
          "id": "5",
        },
        {
          "id": -1,
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onEndReached={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View>
            <Image
              source={
                {
                  "uri": undefined,
                }
              }
            />
            <div
              colors={
                [
                  "rgba(0, 0, 0, 0)",
                  "rgba(0, 0, 0, 0.1)",
                  "rgba(0, 0, 0, 0.3)",
                  "rgba(0, 0, 0, 0.6)",
                ]
              }
            >
              MockLinearGradient
            </div>
            <View>
              <Text />
            </View>
            <View>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
              >
                <View>
                  <View>
                    <Icon
                      name="Invite"
                    />
                    <Text>
                      Invite
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View>
              <Icon
                name="Search"
              />
              <TextInput
                autoCapitalize="none"
                autoCorrect={false}
                autoFocus={false}
                editable={true}
                onChangeText={[Function]}
                placeholder="Search Members"
                underlineColorAndroid="transparent"
              />
            </View>
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              <Text />
              <Icon
                name="ArrowDown"
              />
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "foo.gif",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Foo Lane
            </Text>
            <Text>
              here
            </Text>
            <Text
              numberOfLines={4}
            >
              Hello!
            </Text>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "bar.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bar Jones
            </Text>
            <Text>
              there
            </Text>
            <Text
              numberOfLines={4}
            >
              Not a stork
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "baz.png",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Baz Chu
            </Text>
            <Text
              numberOfLines={4}
            >
              Could be
            </Text>
          </View>
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <View>
              <View>
                <Image
                  source={
                    {
                      "uri": "bonk.jpg",
                    }
                  }
                />
              </View>
            </View>
            <Text>
              Bonk Gundsdottir
            </Text>
            <Text
              numberOfLines={4}
            />
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
      >
        <View>
          <View />
          <View />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
